# d2r-mod-editor

./: CMakeLists.txt  LICENSE  README.md  TODO.md  memo.md
include/: constants.h  database.h  database_manager.h  editor.h  logger.hpp  resources.h  sqlite_manager.h
resources/officialData/global/excel/: weapons.txt
src/: database.cpp  database_manager.cpp  editor.cpp  editor_manager.cpp  example.cpp  logger.cpp  logger_manager.cpp  main.cpp  resources.cpp
